[project]
name = "todolist"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "=", email = "name@example.com" }
]
dependencies = [
    "aiogram>=3.8.0",
    "pydantic-settings>=2.3.4",
    "sqlalchemy>=2.0.31",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "ruff>=0.4.10",
    "aiosqlite>=0.20.0",
]

[tool.ruff.lint]
ignore = ["E701"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/todolist"]
